fix mobile spacings, fix mobile card-slider

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -19,7 +19,7 @@ $col-background: #263238;
 }
 
 @mixin element-to-element-margin-medium {
-    margin-bottom: rem(50px);
+    margin-bottom: rem(40px);
 
     @include media-breakpoint-up(md) {
         margin-bottom: rem(70px);
